--- a/docs/ubuntu-vm.ipynb
+++ b/docs/ubuntu-vm.ipynb
@@ -79,18 +79,18 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "name": "python",
-   "version": "3.10.8"
+   "version": "3.10.8 (main, Nov 15 2022, 05:25:54) [Clang 14.0.0 (clang-1400.0.29.202)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+    "hash": "60366f1473b1af87a5acea3da57499219828483da6ec7d559c47d7539759ff63"
    }
   }
  },
