--- a/docs/ubuntu-vm.ipynb
+++ b/docs/ubuntu-vm.ipynb
@@ -79,7 +79,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -90,7 +90,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "60366f1473b1af87a5acea3da57499219828483da6ec7d559c47d7539759ff63"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
